@@ -1,3 +1,12 @@
+2007-06-14  Colin Walters  <walters@neutron.verbum.private>
+
+	* python/gmenu.c (pygmenu_tree_handle_monitor_callback): Acquire and
+	release Python GIL around invocation (#442747).
+	(pygmenu_tree_add_monitor): Set user data to NULL if it's not passed in.
+	Check that the passed object is a callable.
+
+	* configure.in: Require Python 2.3 for above changes.
+
 2007-06-03  Vincent Untz  <vuntz@gnome.org>
 
 	* configure.in: post-release bump to 2.19.4
